appId: com.example.knucklegame
---
- launchApp:
    clearState: true
- tapOn: Fake link
- tapOn: Your name
- inputText: Host
- hideKeyboard
- tapOn: Player vs Player
- tapOn: Host a game
- extendedWaitUntil:
    visible: FakePeer
    timeout: 15000
