appId: com.example.knucklegame
---
- launchApp:
    clearState: true
- tapOn: Fake link
- tapOn: Your name
- inputText: Client
- hideKeyboard
- tapOn: Player vs Player
- tapOn: Join a game
- extendedWaitUntil:
    visible: Fake Peer
    timeout: 10000
- tapOn: Fake Peer
- extendedWaitUntil:
    visible: Enter the code shown on the host phone
    timeout: 10000
- inputText: "1234"
- extendedWaitUntil:
    visible: FakeHost
    timeout: 15000
